--- a/angular-tour-of-heroes/src/app/heroes/heroes.component.css
+++ b/angular-tour-of-heroes/src/app/heroes/heroes.component.css
@@ -1,14 +1,13 @@
+/* HeroesComponent's private CSS styles */
 .heroes {
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
   width: 15em;
 }
-
 .heroes li {
-  cursor: pointer;
   position: relative;
-  left: 0;
+  cursor: pointer;
   background-color: #EEE;
   margin: .5em;
   padding: .3em 0;
@@ -22,14 +21,16 @@
   left: .1em;
 }
 
-.heroes li.selected {
-  background-color: gray;
-  color: white;
+.heroes a {
+  color: #333;
+  text-decoration: none;
+  position: relative;
+  display: block;
+  width: 250px;
 }
 
-.heroes li.selected:hover {
-  background-color: #BBD8DC;
-  color: white;
+.heroes a:hover {
+  color:#607D8B;
 }
 
 .heroes .badge {
@@ -37,12 +38,14 @@
   font-size: small;
   color: white;
   padding: 0.8em 0.7em 0 0.7em;
-  background-color: #405061;
+  background-color:#405061;
   line-height: 1em;
   position: relative;
   left: -1px;
   top: -4px;
   height: 1.8em;
+  min-width: 16px;
+  text-align: right;
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
